hphp/hack/test/typecheck/readonly/as_mut_collections.php.exp
File "as_mut_collections.php", line 24, characters 3-20:
Only value types and arrays can be converted to mutable. This value can never be a primitive. (Typing[4434])
File "as_mut_collections.php", line 36, characters 3-20:
Only value types and arrays can be converted to mutable. This value can never be a primitive. (Typing[4434])
